Setup more detailed examples of API calls

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   <script>
     window.$docsify = {
       name: 'iguama',
-      repo: 'https://github.com/iguama/iguama.github.io/',
-      log: '/media/iguama.png'
+      log: './media/iguama.png'
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
